data/derived/sp14/progs/unify/prog4761.ml.out
Characters 130-131:
  | Sine e -> Format.printf "sin(%s)" e
                                      ^
Error: This expression has type expr but an expression was expected of type
         string
